Fix cloud row regression with filled overlapping domes

--- a/src/styles.css
+++ b/src/styles.css
@@ -386,50 +386,50 @@ body {
 .service-card-cloud-row {
   position: relative;
   z-index: 2;
-  height: 44px;
-  top: -42px;
+  height: 42px;
+  top: -34px;
   margin-top: 0;
-  margin-bottom: -42px;
+  margin-bottom: -34px;
   background: transparent;
   overflow: hidden;
 }
 
 .service-cloud {
   position: absolute;
-  bottom: -62%;
+  bottom: -54%;
   background: #fffdfc;
-  border: 1px solid #e7d6d7;
+  border: 0;
   border-radius: 50%;
   aspect-ratio: 1 / 1;
 }
 
 .service-cloud--outer-left {
-  left: -7%;
-  width: 31%;
+  left: -9%;
+  width: 34%;
   z-index: 1;
 }
 
 .service-cloud--inner-left {
-  left: 16%;
-  width: 23%;
+  left: 17%;
+  width: 24%;
   z-index: 2;
 }
 
 .service-cloud--center {
-  left: 31%;
-  width: 38%;
+  left: 29%;
+  width: 42%;
   z-index: 3;
 }
 
 .service-cloud--inner-right {
-  right: 16%;
-  width: 23%;
+  right: 17%;
+  width: 24%;
   z-index: 2;
 }
 
 .service-cloud--outer-right {
-  right: -7%;
-  width: 31%;
+  right: -9%;
+  width: 34%;
   z-index: 1;
 }
 
